# page-tracker

./: constraints.txt  docker-compose.yml  main.py  pyproject.toml
src/page_tracker/: app.py
test/: conftest.py
web/: Dockerfile  Dockerfile.dev  constraints.txt  pyproject.toml
web/src/page_tracker/: app.py
web/test/: conftest.py
web/test/unit/: test_app.py
