[build-system]
requires = ["setuptools>=67.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "page_tracker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "flask>=3.1.1",
    "redis>=6.1.0",
]

[project.optional-dependencies]
dev = [
"bandit",
"black",
"flake8",
"isort",
"pylint",
    "pytest",
    "pytest-timeout",
    "requests",
]